<resources>
    <string name="app_name">FaceDetectWithHelloSystem</string>
    <string name="image">image</string>
    <string name="faceDetectAndSayHello">人臉偵測打招呼</string>
    <string name="lexiconManagement">詞庫管理</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newLexicon">新增</string>
    <string name="chooseLexicon">選擇詞庫</string>
    <string name="lexiconName">詞庫名稱</string>
    <string name="oldLexiconName">舊詞庫名稱</string>
    <string name="newLexiconName">新詞庫名稱</string>
    <string name="features">操作項目</string>
    <string name="edit">編輯</string>
    <string name="choose">選擇</string>
    <string name="delete">刪除</string>
    <string name="word">word</string>
    <string name="newFeedBackWord">新增回饋詞</string>
    <string name="editSuccess">修改成功</string>
    <string name="newSuccess">新增成功</string>
    <string name="deleteSuccess">刪除成功</string>
    <string name="deleteFailed">刪除失敗</string>
    <string name="wordName">字詞名稱</string>
    <string name="lexiconNotExist">詞庫不存在</string>
    <string name="columnCanNotBeEmpty">欄位不可為空</string>
    <string name="areYouSureToDelete">確定刪除?</string>
    <string name="yes">確定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="newWord">new word :</string>
    <string name="maximumIs20">最多輸入20筆資料</string>
    <string name="error">error</string>
    <string name="BabyPlus">Baby+</string>
    <string name="Kindergarten">幼兒園園所</string>
    <string name="Loading">讀取中…</string>
    <string name="Register">註冊</string>
    <string name="PickUp">接送</string>
    <string name="PickUpNotice">接送通知</string>
    <string name="NameNecessary">姓名*</string>
    <string name="GenderNecessary">性別*</string>
    <string name="Gender">性別</string>
    <string name="BirthdayNecessary">出生日期*</string>
    <string name="BirthdayDefault">1990–01-01</string>
    <string name="Class">班級</string>
    <string name="Parent">監護人手機</string>
    <string name="Relation">關係</string>
    <string name="Boy">男</string>
    <string name="BoyEnglish">M</string>
    <string name="Girl">女</string>
    <string name="GirlEnglish">F</string>
    <string name="PleaseInputName">請輸入姓名</string>
    <string name="PleaseCheckTelOrRelationNotNull">請確認有無輸入關係或手機號碼格式錯誤</string>
    <string name="DeleteSpace">刪\t除</string>
    <string name="Cancel">取消</string>
    <string name="PleaseCheckNetwork">請確認網路是否有連線</string>
    <string name="PhotoLeast">照片不能少於九張</string>
    <string name="UpError">上傳失敗</string>
    <string name="RetryUp">是否重新上傳?</string>
    <string name="Check">確認</string>
    <string name="HostRemember">主人我記住你了</string>
    <string name="ExpectedToArrive">%1$s的%2$s將在%3$d分鐘後抵達！</string>
    <string name="ParentPickUpNotice">%1$s的%2$s在%3$d分鐘來接小朋友！</string>
    <string name="AlreadyArrive">%1$s的%2$s已經到達園所！</string>
    <string name="SayHi">打招呼</string>
    <string name="Manage">管理</string>
    <string name="Zenbo">Zenbo</string>
    <string name="ChooseZenboClass">請選擇Zenbo服務的班級</string>
    <string name="Finish">完成</string>
    <string name="Delete">刪除</string>
    <string name="Deleted">刪除中…</string>
    <string name="DeleteError">刪除失敗</string>
    <string name="DeleteCheck">確定要刪除%1$s的全部資料嗎?</string>
    <string name="PleaseOpenPermissions">請開啟權限</string>
    <string name="PleaseContactFFHelpAddClasses">請聯繫技術人員協助新增班級資料</string>
    <string name="NotStudentData">目前無學員資料</string>
    <string name="MedicateRemind">託藥提醒</string>
    <string name="MedicateTime">用藥時間</string>
    <string name="MedicateTimeSetting">餐點時間設定</string>
    <string name="TimeSetting">時間設定</string>
    <string name="SystemSetting">系統設定</string>
    <string name="BreakfastTime">早餐時間</string>
    <string name="LunchTime">午餐時間</string>
    <string name="DessertTime">點心時間</string>
    <string name="Hour">時</string>
    <string name="Min">分</string>
    <string name="PleaseCheckInputTime">請確認輸入的時間</string>
    <string name="NextMedicate">下次餵藥</string>
    <string name="MedicateBeforeNotice">*飯前餵藥提醒:設定時間前30分鐘語音提醒</string>
    <string name="MedicateAfterNotice">*飯後餵藥提醒:設定時間後30分鐘語音提醒</string>
    <string name="MedicateFirstTime">開始第一次提醒</string>
    <string name="MedicateNotChoose">選項未完成</string>
    <string name="MedicateThreeLimitTime">11:01</string>
    <string name="MedicateTwoLimitTime">15:01</string>
    <string name="MedicateDeleteTime">23:55</string>
    <string name="MedicateDelteTodyDefault">2017–08-03</string>
    <string name="TakingMedicateStudent">%1$s共有%2$d位小朋友要吃藥,分別是</string>
    <string name="RegisteredError">驗證碼錯誤</string>
    <string name="PleaseInputRegistered">請輸入驗證碼</string>
    <string name="CheckIn">點名</string>
    <string name="CheckInStatus">出勤確認</string>
    <string name="CheckInDialogTitle">查詢並確認學員出勤狀況</string>
    <string name="CheckInAllAttend">該班級學員全到齊</string>
    <string name="CheckInNotAttend">有學員缺席請確認</string>
    <string name="Search">查詢</string>
    <string name="CheckInNotAttendNoticeOne">一共有%1$d位小朋友還沒點到名, 請老師趕快確認喔！</string>
    <string name="CheckInNotAttendNoticeTwo">一共有%1$d位小朋友還沒點到名, %2$d位小朋友請假, 請老師趕快確認喔！</string>
    <string name="NotAttendReason">缺席原因</string>
    <string name="SickLeave">病假</string>
    <string name="Leave">事假</string>
    <string name="Other">其他</string>
    <string name="Remark">備註事項</string>
    <string name="WhoAreYou">我不認識你呢</string>
    <string name="IntoSchoolCheckIn">入園點名</string>
    <string name="LeaveSchoolCheckIn">離園點名</string>
    <string name="ManualCheckIn">手動點名</string>
    <string name="LeaveManagement">請假管理</string>
    <string name="StudentRoster">學員名冊</string>
    <string name="IntoSchool">入園</string>
    <string name="LeaveSchool">離園</string>
    <string name="IntoTimeDefault">08:00</string>
    <string name="LeaveTimeDefault">17:00</string>
    <string name="AskLeaveTime">請假日期</string>
    <string name="noLeaveSchool">還沒有點名離園</string>
    <string name="DataSearch">資料查詢</string>
    <string name="Setting">設定</string>
    <string name="Date">日期</string>
    <string name="IntoSchoolTime">入園時間</string>
    <string name="LeaveSchoolTime">離園時間</string>
    <string name="MedicateData">託藥資訊</string>
    <string name="TodayHaveMedicate">今日有託藥</string>
    <string name="NoInfo">-</string>
    <string name="TeacherManage">老師管理</string>
    <string name="ManualLeaveReason">手動請假</string>
    <string name="AskLeaveReasson">請假原因</string>
    <string name="IntoLeaveSchoolTime">入離園時間</string>
    <string name="IntoLeaveRemind">入離園提醒</string>
    <string name="EveryDayRemindCheckInStatus">每日自動提醒確認學員出席狀況</string>
    <string name="ExportData">匯出資料</string>
    <string name="EveryDayExportToEmail">每日於設定時間自動匯出至所輸入的電郵地址</string>
    <string name="ExportTimeDefault">19:00</string>
    <string name="IntoSchoolRemindTime">入園提醒時間</string>
    <string name="LeaveSchoolRemindTime">離園提醒時間</string>
    <string name="IntoSchoolRemindTimeDefault">08:00</string>
    <string name="LeaveSchoolRemindTimeDefault">16:30</string>
    <string name="Email">E-mail</string>
    <string name="IntoTimeNotAfterLeaveTime">入園時間不能晚於離園時間</string>
    <string name="LeaveTimeNotBeforeIntoTime">離園時間不能早於入園時間</string>
    <string name="PleaseContactFFHelpAddZenbo">請聯繫技術人員協助新增 Zenbo權限</string>
    <string name="ClassNotSettingPleaseChooseOther">%1$s無設定,請選取其他班級</string>
    <string name="PeopleExceededLimit">人數超過上限</string>
    <string name="LeastChooseOneClass">最少要選擇一個班級</string>
    <string name="AtHomeTime">到家時間</string>
    <string name="ExpiredAndContact">使用期限已到期\n請與峰傅智慧聯絡</string>
    <string name="BodyTemperatureMeasure">體溫量測</string>
    <string name="DevicePair">裝置配對</string>
    <string name="DeviceRequireTurnOnBluetooth">此裝置要求開啟藍芽功能</string>
    <string name="PairBluetoothTemperature">配對藍芽耳溫槍</string>
    <string name="ChooseBluetoothDevice">觸擊選擇欲配對的藍芽裝置</string>
    <string name="action_disconnect">disconnect</string>
    <string name="action_connect">connect</string>
    <string name="not_available">n/a</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="battery">%d%%</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="BleConnectSuccessPleaseChooseStudent">裝置連結成功\n可以選擇學員量測體溫</string>
    <string name="OpenBluetoothPleaseConnectAgain">藍芽已開啟,請在連結一次</string>
    <string name="PleaseConnectBLE">請連結藍芽耳溫槍</string>
    <string name="PleaseConnectDevice">請連結裝置</string>
    <string name="BLEConnecting">藍芽連線中…</string>
    <string name="AllStudentMeasurementCompleted">全部學生已經量測完畢</string>
    <string name="MeasureTemperatureRemind">量測體溫提醒</string>
    <string name="EveryDayRemindMeasureTemperature">每日自動提醒協助量測學員體溫</string>
    <string name="MeasureTemperatureRemindTime">量測提醒時間</string>
    <string name="HelpChildrenMeasure">請幫小朋友量體溫哦!</string>
    <string name="Celsius">度</string>
    <string name="TodayHaveMeasuredFiveTimes">今天已量測過五次</string>
    <string name="EarTemperature">耳溫</string>
    <string name="TemperatureCelsius">%1$s°C</string>
    <string name="FCMStudentTemperature">%1$s %2$s的體溫為%3$s°C</string>
    <string name="LimitTemperature">37.5</string>
    <string name="ChildrenMayFeverPleaseNotice">小朋友可能發燒嘍，請老師或爸爸媽媽注意唷</string>
    <string name="PleaseHelpChildrenMeasureTemperature">請幫%1$s量測體溫</string>
    <string name="IntoSchoolCheckInMeasureTemperature">入園點名量測體溫</string>
    <string name="IntoSchoolCheckInMeasureTemperatureIntroduction">開啟 : 辨識點名入園後開啟量測體溫\n關閉 : 僅辨識點名入園</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_empty">No device found</string>
    <string name="hts_notification_connected_message">%s is connected.</string>
    <string name="hts_feature_title">HTM</string>
    <string name="not_available_value">" - "</string>
    <string name="hts_default_name">DEFAULT HTM</string>
    <string name="hts_about_text">HTM (Health Thermometer Monitor) profile allows you to connect to your Health Thermometer sensor.
        It shows you the temperature value in Celsius.</string>
    <string name="ErrorOccurred">發生錯誤</string>
    <string name="TooManyPeople">太多人了，請讓我看清楚一點</string>
    <string name="OneDayThreeTimes">一天三次</string>
    <string name="BeforeMeal">三餐飯前</string>
    <string name="AfterMeal">三餐飯後</string>
    <string name="OneDayTwoTimes">一天兩次</string>
    <string name="BeforeBreakfastAndLunch">早餐、中餐前</string>
    <string name="AfterBreakfastAndLunch">早餐、中餐後</string>
    <string name="BeforeBradkfastAndDessert">早餐、點心前</string>
    <string name="AfterBradkfastAndDessert">早餐、點心後</string>
    <string name="BeforeLunchAndDessert">中餐、點心前</string>
    <string name="AfterLunchAndDessert">中餐、點心後</string>
    <string name="OneDayOneTime">一天一次</string>
    <string name="BeforeBreakfast">早餐前</string>
    <string name="AfterBreakfast">早餐後</string>
    <string name="BeforeLunch">中餐前</string>
    <string name="AfterLunch">中餐後</string>
    <string name="BeforeDessert">點心前</string>
    <string name="AfterDessert">點心後</string>
    <string name="FourHourTimes">每四小時一次</string>
    <string name="MedicationThreeTimes">用藥三次</string>
    <string name="MedicationTwoTimes">用藥兩次</string>
    <string name="TodayAllCheckIn">今天小朋友都到齊摟</string>
    <string name="StudentDataRecord">學生資料紀錄</string>
    <string name="HiAttachedFileTodayStudentDataRecord">您好，附件為今日學生資料紀錄</string>
</resources>