<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".NewLexiconFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lexiconName" />

        <android.support.percent.PercentRelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_widthPercent="30%"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/chooseTv"
                android:layout_toEndOf="@id/editTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="30%"
                android:gravity="center"
                android:text="@string/choose" />

            <TextView
                android:id="@+id/deleteTv"
                android:layout_toEndOf="@id/chooseTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="30%"
                android:gravity="center"
                android:text="@string/delete" />

        </android.support.percent.PercentRelativeLayout>

    </LinearLayout>
</LinearLayout>