<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.ManageLexiconFragment">

    <com.example.user.facedetectwithhellosystem.tools.SquareImageView
        android:id="@+id/newLexiconImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_oval"
        android:contentDescription="@string/image"
        android:padding="@dimen/large_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:layout_margin="@dimen/small_margin"/>

    <TextView
        android:id="@+id/newLexiconTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/newLexicon"
        android:drawableTop="@drawable/button_oval"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newLexiconImg"
        app:layout_constraintRight_toLeftOf="@id/guideline"/>



    <com.example.user.facedetectwithhellosystem.tools.SquareImageView
        android:id="@+id/chooseLexiconImg"
        android:background="@drawable/button_oval"
        android:contentDescription="@string/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        android:layout_margin="@dimen/small_margin"/>

    <TextView
        android:id="@+id/chooseLexiconTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chooseLexicon"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/chooseLexiconImg"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline3"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>